2000-10-17  Philip Blundell  <pb@futuretv.com>

	* lib/ld-lib.exp, ld-elfvsb: Update from trunk version.

2000-04-12  Alan Modra  <alan@linuxcare.com.au>

	* ld-selective/selective.exp (test4): Delete incorrect foo__1B test.

2000-03-13  Nick Clifton  <nickc@cygnus.com>

	* ld-scripts/phdrs.t: Discard all unexpected sections.

2000-02-27 H.J. Lu  (hjl@gnu.org)

	* lib/ld-lib.exp (default_ld_link): Added "$LIBS" to libs.

1999-11-01  Nick Clifton  <nickc@cygnus.com>

	* ld-selective/selective.exp: Fix test to disable these checks for
	PE based targets.

1999-10-29  Catherine Moore  <clm@cygnus.com>

	* ld-selective/selective.exp:  Remove test6.
	* ld-selective/5.cc: Delete.

1999-10-28  Scott Bambrough  <scottb@netwinder.org>

	* ld-srec/srec.exp: Setup expected failures for
	srec tests on ARM Linux.

1999-09-17  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* ld-shared/shared.exp: xfail linux*libc1 shared (non PIC, load
	offset) test.

1999-09-12  Ian Lance Taylor  <ian@zembu.com>

	* ld-scripts/script.exp: Add --image-base 0 for PE targets.

1999-08-17  H.J. Lu  <hjl@gnu.org>

	* ld-cdtest/cdtest-foo.cc (Foo::init_foo): Use "%ld" for sizeof.

1999-08-09  Jakub Jelinek  <jj@ultra.linux.cz>

	* ld-elfvers/vers.exp: Run tests on sparc*-*-linux*.
	* ld-shared/shared.exp: Likewise.

1999-07-28  Nick Clifton  <nickc@cygnus.com>

	* lib/ld-lib.exp (proc big_or_little_endian): New proc.
	Determine if a big endian or little endian output format hass
	been selected by any of the multilib options, and if so return
	a suitable command line option for the linker/assembler.
	(proc default_ld_link): Include the result of proc
	big_or_little_endian on the command line to the linker.
	(proc ld_simple_link): Include the result of proc
	big_or_little_endian on the command line to the linker.
	(proc default_ld_compile): Append multilib flags to compiler
	switches.
	(proc default_ld_assemble): Include the result of proc
	big_or_little_endian on the command line to the linker.
